--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <!-- NORMALIZA   STYLE  -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <!-- style css -->
-        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
+        <header>
+            <div>
+               <label for="search">
+                <input type="search" id="search" placeholder="Search 9,000 tutorials">
+               </label>
+            </div>
+            <div>
+                <img src="images/doc_2023-09-25_11-43-56.png" alt="rasm">
+            </div>
+            <div>
+                <label for="menu">
+                    <input type="text" >
+                    <input type="text">
+                    <button>Sign in</button>
+                </label>
+            </div>
+        </header>
     </body>
     </html>
+</body>
+</html>
