--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Document</title>
     </head>
     <body>
-        <header>
+        <header class="header container">
             <div>
                <label for="search">
                 <input type="search" id="search" placeholder="Search 9,000 tutorials">
+
                </label>
             </div>
             <div>
